Add parameters and update Terraform pipeline stages
Added parameters for Terraform apply and destroy options, along with environment selection. Updated stages for scanning, installation, and deployment of Terraform.

--- a/pipeline.yml
+++ b/pipeline.yml
@@ -1,1 +1,187 @@
 
+parameters:
+  - name: runTerraformApply
+    type: boolean
+    default: false
+    displayName: "Run Terraform Apply?"
+    values:
+      - false
+      - true
+  - name: runTerraformDestroy
+    type: boolean
+    default: false
+    displayName: "Run Terraform Destroy?"
+    values:
+      - false
+      - true
+
+  - name: environment
+    type: string
+    default: dev
+    displayName: "Terraform runtime option(tumko kha pr pipeline run krni hai?"
+    values:
+      - dev
+      - prod
+      - test
+
+variables:
+- name: WorkDir                                                                                               # Required as first property. Variable name.
+  value: $(System.DefaultWorkingDirectory)/environment/${{ parameters.environment }}                                                    # Variable value.
+trigger:  none
+pool:  Infra-Nova-Pool
+
+stages:
+ - stage: TerraformScanning
+   displayName: Scanning 
+   jobs:
+    - job: TfsecJob
+      displayName: Tfsec Scanning
+      steps:
+      - task: tfsec@1
+        displayName: tfsec
+        inputs:
+          version: 'v1.26.0'
+          dir: '$(WorkDir)'
+    - job: tflintjob
+      displayName: Tflint Scanning
+      dependsOn:  tfsecJob
+      steps:
+      - task: PowerShell@2
+        displayName: tflint install
+        inputs:
+          targetType: 'inline'
+          script: |
+            choco install tflint -y
+                          tflint --version
+      - task: PowerShell@2
+        displayName: tflint scanning
+        inputs:
+          targetType: 'inline'
+          script: |
+            tflint --init
+            tflint --recursive
+          workingDirectory: '$(WorkDir)'
+
+    - job: checkovjob
+      displayName: checkov Scanning
+      dependsOn:  tflintjob
+      steps:
+      - task: PowerShell@2
+        displayName: checkov scanning 
+        continueOnError: true
+        inputs:
+          targetType: 'inline'
+          script: 'checkov -d . --framework terraform'
+          workingDirectory: '$(WorkDir)'
+
+ - stage: TerraformInstaller
+   displayName: Terraform Installer
+   jobs:
+   - job: TerraformInstaller
+     displayName: Terraform Installer
+     steps:
+     - task: TerraformInstaller@1
+       inputs:
+         terraformVersion: 'latest'       
+
+ - stage: Build
+   displayName: Terraform fmt,validate,init,plan
+   jobs:
+   - job: Terraformfmt
+     displayName: Terraform fmt
+     steps:
+     - task: TerraformTask@5
+       displayName: Terraform fmt
+       inputs:
+         provider: 'azurerm'
+         command: 'custom'
+         workingDirectory: '$(WorkDir)'
+         outputTo: 'console'
+         customCommand: 'fmt'
+         environmentServiceNameAzureRM: 'shukla.jitendra4-svc-Web App Host Project-InfraNova'
+   - job: TerraformInit
+     displayName: Terraform Init
+     dependsOn: Terraformfmt
+     steps:
+     - template:  steps/build.yml
+
+   - job:  TerrafromValidate
+     displayName: Terraform Validate
+     dependsOn:  TerraformInit
+     steps:
+     - template:  steps/build.yml
+     - task: TerraformTask@5
+       displayName: Terraform Validate
+       inputs:
+         provider: 'azurerm'
+         command: 'validate'
+         workingDirectory: '$(WorkDir)'
+   - job: TerraformPlan
+     displayName: Terraform Plan
+     dependsOn: TerrafromValidate
+     steps:
+     - template:  steps/build.yml
+     - task: TerraformTask@5
+       displayName: Terraform Plan
+       inputs:
+         provider: 'azurerm'
+         command: 'plan'
+         workingDirectory: '$(WorkDir)'
+         environmentServiceNameAzureRM: 'shukla.jitendra4-svc-Web App Host Project-InfraNova'
+
+ - stage: ManualValidation
+   displayName: Manual validation
+   pool:  server
+   jobs:
+   - job: ManualValidation
+     displayName: Manual Validation
+     steps:
+     - task: ManualValidation@1
+       displayName: Manual Validation
+       inputs:
+         notifyUsers: 'shukla.jitendra4@gmail.com'
+         approvers: 'shukla.jitendra4@gmail.com'
+         instructions: 'Please Approve'
+
+ - stage: Terraformdiployement
+   displayName: Terraform Deployment
+   dependsOn:  ManualValidation
+   condition: and(
+      succeeded(),
+      eq(variables['Build.SourceBranch'], 'refs/heads/main'),
+      eq('${{ parameters.runTerraformApply }}', true)
+    )
+   jobs:
+   - job: TerraformApply
+     displayName: Terraform Apply
+     steps:
+     - template:  steps/build.yml
+     - task: TerraformTask@5
+       displayName: Terraform Apply
+       inputs:
+         provider: 'azurerm'
+         command: 'apply'
+         workingDirectory: '$(WorkDir)'
+         environmentServiceNameAzureRM: 'shukla.jitendra4-svc-Web App Host Project-InfraNova'
+
+ - stage: TerraformDestroy
+   displayName: Terraform Destroy
+   dependsOn:  Terraformdiployement
+   condition: and(
+      succeeded(),
+      eq(variables['Build.SourceBranch'], 'refs/heads/main'),
+      eq('${{ parameters.runTerraformDestroy }}', true)
+    )
+   jobs:
+   - job: TerraformDestroy
+     displayName: Terraform Destroy
+     steps:
+     - template:  steps/build.yml
+     - task: TerraformTask@5
+       displayName: Terraform Destroy
+       inputs:
+         provider: 'azurerm'
+         command: 'destroy'
+         workingDirectory: '$(WorkDir)'
+         environmentServiceNameAzureRM: 'shukla.jitendra4-svc-Web App Host Project-InfraNova'
+
